# random-user-generator-rs

./: Cargo.toml  Makefile  README.md
examples/: example.rs  random_users.rs
src/: client.rs  config.rs  lib.rs  main.rs  user.rs  userdata.rs
