[package]
name = "random-data-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
simple-log = "1.6.0"
log = "0.4.20"
[[example]]
name = "random_users"